syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.uuhnaut69.ledger_command.grpc";
option java_outer_classname = "AccountGrpcProto";

package account;

service AccountGrpc {
  // Create account with externalId, code and initial amount
  rpc CreateAccount (CreateAccountRequest) returns (AccountResponse) {}

  // Deposit amount to account
  rpc Deposit (DepositRequest) returns (AccountResponse) {}

  // Withdraw amount from account
  rpc Withdraw (WithdrawRequest) returns (AccountResponse) {}

  // Transfer amount from one account to another account
  rpc Transfer (TransferRequest) returns (AccountResponse) {}
}

message AccountResponse {
  int64 id = 1;
  int64 externalId = 2;
  int32 code = 3;
  int32 ledger = 4;
  int64 amount = 5;
}

message CreateAccountRequest {
  int64 externalId = 1;
  int32 code = 2;
  int32 ledger = 3;
  int64 amount = 4;
}

message DepositRequest {
  int64 accountId = 1;
  int64 amount = 2;
}

message WithdrawRequest {
  int64 accountId = 1;
  int64 amount = 2;
}

message TransferRequest {
  int64 fromAccountId = 1;
  int64 toAccountId = 2;
  int64 amount = 3;
}
